In the project selector, prevent the icon columns from stretching.

--- a/editor-renderer/css/mapeditor.css
+++ b/editor-renderer/css/mapeditor.css
@@ -2,6 +2,11 @@ html, body {
   height: 99%;
 }
 
+.project-selector-table ui5-table-cell:nth-child(-n+2) {
+  width: 0;
+  min-width: fit-content;
+}
+
 div.fill-parent-height {
   height: 100%;
 }
